fixed stlying on mobile

--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
     --my-grey: rgb(121,124,126);
     --my-light-grey: rgb(212,214,218);
 }
-html {
-    overflow: hidden;
-    width: 100%;
-    }
+
 
 body {
     font-family: 'roboto';
@@ -18,6 +15,11 @@ body {
     
 }
 
+#title {
+    margin-top: 3vh;
+    font-size: 2.25rem;
+}
+
 #main {
     display: flex;
     flex-direction: column;
@@ -25,7 +27,7 @@ body {
     align-items: center;
     z-index: 1;
     user-select: none;
-    height: 85vh;
+    height: 100vh;
     
 }
 
